# research-py-cookie

./: LICENCE  README.md  cookiecutter.json  copier.yml
helpers/: extensions.py
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: build.yml  ci.yml
{{cookiecutter.project_name}}/paper/: main.tex
{{cookiecutter.project_name}}/src/{{cookiecutter.__project_slug}}/: __init__.py
